fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,11 @@ section {
 }
 
 .sponsorLogo {
+    top: 50%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
     position: relative;
-    height: 5rem;
+    width: 11rem;
     margin-bottom: 3rem;
 }
 
